<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    style="@style/MainActivityMasterLayout"
    tools:context="com.example.agupt23.musicapp.MainActivity">

    <ImageView
        style="@style/MainActivityImageView"
        android:src="@drawable/music_image5" />

    <TextView
        android:id="@+id/description_text_view"
        style="@style/MainActivityTextView"
        android:text="@string/main_activity_description" />

    <Button
        android:id="@+id/play_songs_button"
        style="@style/MainActivityButtons"
        android:layout_alignParentBottom="true"
        android:text="@string/play_songs_button" />

    <Button
        android:id="@+id/create_playlist_button"
        style="@style/MainActivityButtons"
        android:layout_above="@id/play_songs_button"
        android:text="@string/create_playlist_button" />

    <Button
        android:id="@+id/download_button"
        style="@style/MainActivityButtons"
        android:layout_above="@id/create_playlist_button"
        android:text="@string/download_songs_button" />

</RelativeLayout>
